--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,27 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".filter.FilterActivity">
+        </activity>
+        <activity
+                android:name=".home.HomeActivity"
+                android:label="@string/title_activity_home"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".onBoarding.OnBoardingActivity">
+        </activity>
+        <activity android:name=".signUp.SignUpActivity">
+        </activity>
+        <activity android:name=".signIn.SignInActivity">
+        </activity>
+        <activity android:name=".splash.SplashActivity">
+        </activity>
+        <activity android:name=".MainActivity">
         </activity>
     </application>
 
