--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext {
+        kotlin_version = '1.3.21'
+        version_lifecycle_extensions = "2.0.0"
+        kotlin_version = '1.3.31'
+        version_retrofit = "2.5.0"
+        version_kotlin_coroutines = "1.1.0"
+        version_retrofit_coroutines_adapter = "0.9.2"
+        version_moshi = "1.8.0"
+    }
+
     repositories {
         google()
         jcenter()
@@ -19,7 +28,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
