--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".filter.FilterActivity">
+        <activity android:name=".vendorDetails.VendorDetailsActivity">
+        </activity>
+        <activity android:name=".filter.FilterActivity"
+                  android:label="@string/title_activity_filter"
+        >
         </activity>
         <activity
                 android:name=".home.HomeActivity"
