--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.example.android.pilgrim">
 
     <application
@@ -30,11 +30,21 @@
         <activity android:name=".signUp.SignUpActivity">
         </activity>
         <activity android:name=".signIn.SignInActivity">
+
         </activity>
         <activity android:name=".splash.SplashActivity">
+
         </activity>
+
         <activity android:name=".MainActivity">
         </activity>
+
+        <!-- for QR scanner -->
+        <activity
+                android:name="com.journeyapps.barcodescanner.CaptureActivity"
+                android:screenOrientation="portrait"
+                tools:replace="android:screenOrientation"
+                android:stateNotNeeded="true"/>
     </application>
 
 </manifest>
