--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,6 @@ dependencies {
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    //location
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
