--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,10 +80,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
 
-
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
 
     //location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 }
